--- a/src/styles.css
+++ b/src/styles.css
@@ -81,15 +81,17 @@ main {
   font-weight: bold;
 }
 
-.weatehr-app-unit {
+.weather-app-unit {
   margin-top: 6px;
   font-size: 28px;
 }
+
 .weather-forecast {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
 }
+
 .weather-forecast-date {
   text-align: center;
   color: rgba(39, 33, 66, 0.4);
@@ -97,6 +99,7 @@ main {
   line-height: 20px;
   margin-bottom: 10px;
 }
+
 .weather-forecast-icon {
   width: 88px;
   height: 88px;
@@ -110,6 +113,7 @@ main {
   display: flex;
   justify-content: center;
 }
+
 .weather-forecast-temperature {
   padding: 0 10px;
 }
